--- a/src/Pages/Components/Nav/Nav.scss
+++ b/src/Pages/Components/Nav/Nav.scss
@@ -11,16 +11,25 @@
   z-index: 2;
   padding: 0 5vw;
 
+  .link {
+    background-color: transparent;
+    color: $default-black;
+  }
+
   .NavCenter {
     display: flex;
     font-size: 1.2vw;
     line-height: 2.01vw;
+    background-color: $default-yellow;
+    position: absolute;
+    left: 45%;
 
     span {
       display: inline-block;
       padding: 0 9px;
       position: relative;
       font-weight: bold;
+      background-color: transparent;
       z-index: 1;
 
       &:hover {
@@ -55,11 +64,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: transparent;
 
     select {
       font-size: 0.9vw;
       -webkit-appearance: none;
       font-weight: bold;
+      background-color: transparent;
 
       &:hover {
         cursor: pointer;
@@ -69,15 +80,18 @@
     svg {
       width: 0.8vw;
       height: 0.8vw;
+      background-color: transparent;
     }
 
     p {
       padding: 0 0.5vw;
       cursor: pointer;
+      background-color: transparent;
     }
 
     div {
       position: relative;
+      background-color: transparent;
 
       &:hover {
         cursor: pointer;
@@ -87,7 +101,7 @@
         width: 2.3vw;
         height: 2.3vw;
         border-radius: 50%;
-        background: $default-black;
+        background: $default-yellow;
         margin: 0 3px;
       }
 
@@ -98,7 +112,7 @@
         top: 30%;
         left: 35%;
         background-color: transparent;
-        fill: white;
+        fill: $default-black;
       }
     }
   }
