--- a/src/Pages/Main/Main.scss
+++ b/src/Pages/Main/Main.scss
@@ -62,15 +62,32 @@
 
   .productSection {
     width: 100%;
-    height: 120vh;
-    border: 1px solid black;
+    height: 110vh;
     font-size: 60px;
     font-weight: 800;
     text-align: center;
     padding-top: 2%;
+    p {
+      font-size: 5.56vw;
+      line-height: 4.72vw;
+      &:first-child {
+        margin-top: 3%;
+      }
+    }
 
     .items {
+      margin-top: 5%;
       position: relative;
+    }
+
+    .shopNow {
+      font-size: 3vw;
+      font-weight: 500;
+      margin-top: 3vw;
+
+      .link {
+        color: $default-black;
+      }
     }
 
     .slick-slider {
@@ -89,8 +106,8 @@
       position: absolute;
       top: 20%;
       background-color: transparent;
-      width: 10%;
-      height: 50%;
+      width: 11%;
+      height: 37%;
     }
 
     .arrowLeft {
@@ -104,13 +121,14 @@
 
   .NewsletterSection {
     display: flex;
+    border-top: 1.5px $default-black solid;
 
     img {
       width: 50%;
+      height: 85vh;
     }
 
     div {
-      border: 1px solid red;
       width: 50%;
       display: flex;
       flex-direction: column;
