Fix : 수정 추가 진행중

--- a/src/Pages/LoginRegister/Components/ForgotPw.scss
+++ b/src/Pages/LoginRegister/Components/ForgotPw.scss
@@ -14,7 +14,7 @@
     }
     .ForgotPw {
       @include flex-column;
-      position: fixed;
+      position: absolute;
       left: 8.33vw;
       top: 50%;
       width: 29.17vw;
