--- a/src/Pages/LoginRegister/LoginRegister.scss
+++ b/src/Pages/LoginRegister/LoginRegister.scss
@@ -14,7 +14,7 @@
     }
     .loginFormWrapper {
       @include flex-column;
-      position: fixed;
+      position: absolute;
       width: 29.17vw;
       left: 8.33vw;
       top: 50%;
